--- a/index.html
+++ b/index.html
@@ -5,14 +5,14 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
-  <link rel="stylesheet" href="./css/styles.css">
+  <link rel="stylesheet" href="./css/index.css">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lexend">
 </head>
 <body>
-    <!-- David -->
-    <h1> Aqui va la parte de David </h1>
-
     <!-- Cristian -->
     <h1> Aqui va la parte de Cristian </h1>
 
+    <!-- David -->
+    <h1> Aqui va la parte de David </h1>
 </body>
 </html>
